<resources>
    <string name="app_name" translatable="false">Quick Balance</string>
    <string name="bottom_center_string">Home</string>
    <string name="bottom_right_string">Debts</string>
    <string name="bottom_left_string">Credits</string>
    <string name="credits">Credits</string>
    <string name="debts">Debts</string>
    <string name="total_credits">Total credits</string>
    <string name="total_debts">Total debts</string>
    <string name="to_pay">To pay</string>
    <string name="chart_home_fragment">Chart balance</string>
    <string name="point" translatable="false">•</string>
    <string name="resume_home_fragment">Summary</string>
    <string name="history">History</string>
    <string name="history_op_home_fragment">Touch to view the history</string>
    <string name="gives_to_me">Owes me:</string>
    <string name="search_editText_credit">Search credit…</string>
    <string name="search_editText_debit">Search debt…</string>
    <string name="get_money">Redeem</string>
    <string name="payed">Paid:</string>
    <string name="of">of</string>
    <string name="credit_from">Credit from:</string>
    <string name="to">to</string>
    <string name="not_defined">not defined</string>
    <string name="update">Update</string>
    <string name="new_transaction">New transaction</string>
    <string name="fields_not_valid">Fields not valid</string>
    <string name="member_already_exists">member already exists</string>
    <string name="already_exists">Already exists</string>
    <string name="members">MEMBERS</string>
    <string name="data">DATA</string>
    <string name="fullName">Fullname</string>
    <string name="cellphone">Cellphone</string>
    <string name="or">Or</string>
    <string name="import_from_contacts">Import from contacts</string>
    <string name="add">Add</string>
    <string name="no_member_added">No member added</string>
    <string name="next">Next</string>
    <string name="import_contacts">Import contacts</string>
    <string name="no_contacts">No contacts</string>
    <string name="search_by_name">Search by name</string>
    <string name="read_contacts_permission">Permission for reading contacts</string>
    <string name="read_contacts_permission_message">Provide permissions to access the address book</string>
    <string name="disabled_read_contacts_permission">You have disbaled permissions for access the address book</string>
    <string name="transaction_data">Transaction data</string>
    <string name="credit">CREDIT</string>
    <string name="debit">DEBT</string>
    <string name="cancel">Cancel</string>
    <string name="none">None</string>
    <string name="day">The same day</string>
    <string name="day_before">day before</string>
    <string name="days_before">days before</string>
    <string name="add_reminder">Add reminder</string>
    <string name="nothing">Nothing</string>
    <string name="description">Description</string>
    <string name="description_field">Description:</string>
    <string name="amount">Amount</string>
    <string name="per_person">Per person</string>
    <string name="total_import_field">Total amount:</string>
    <string name="import_per_person_field">Import per person</string>
    <string name="transaction_ends">Transaction ends</string>
    <string name="start_date">Start date</string>
    <string name="start_date_field">Start date:</string>
    <string name="end_date_field">End date:</string>
    <string name="end_date">End date</string>
    <string name="notification_management">Notification management</string>
    <string name="full_name_field">Fullname:</string>
    <string name="user_data">User data</string>
    <string name="cellphone_field">Cellphone:</string>
    <string name="confirm_delete_credit">Do you want to delete the credit?</string>
    <string name="confirm_delete_debts">Do you want to delete the debt?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_new_credit">Create new credit</string>
    <string name="import_data">Import data</string>
    <string name="money_received_field">Money received:</string>
    <string name="money_received">Money received</string>
    <string name="update_import">Update import</string>
    <string name="money_sent_field">Money sent:</string>
    <string name="money_sent">Money sent</string>
    <string name="impossible_update">The total amount must be greater than the amount due</string>
    <string name="no_credit">No credit</string>
    <string name="transaction_removed">Transaction moved to completed section</string>
    <string name="search_debt">Search debt…</string>
    <string name="create_new_debt">Create new debt</string>
    <string name="no_debt">No debt</string>
    <string name="give">Remaining:</string>
    <string name="pay">Pay</string>
    <string name="i_payed">I paid:</string>
    <string name="debt_from">Debt from:</string>
    <string name="transaction_import">Transaction import:</string>
    <string name="no_completed_transactions">No completed transactions</string>
    <string name="app_made_by">App made by\nTornaghi Omar</string>
    <string name="change_currency">Change currency</string>
    <string name="change_language">Change language</string>
    <string name="transaction_history">Transaction history</string>
    <string name="settings">Settings</string>
    <string name="no_data_available">No data available</string>
    <string name="will_expire">will expire</string>
    <string name="today">today</string>
    <string name="in">in</string>
    <string name="with">with</string>
</resources>