<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/gray_light"
tools:context=".Activities.CambiaImportoDebitiActivity">
<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_icon"
        app:menu="@menu/top_app_bar_ok_button"
        app:title="Paga debito" />
</com.google.android.material.appbar.AppBarLayout>

<com.google.android.material.card.MaterialCardView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:paddingBottom="15dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="9dp"
            android:drawableStart="@drawable/ic_baseline_euro_orange_icon"
            android:drawableLeft="@drawable/ic_baseline_euro_orange_icon"
            android:text="@string/import_data"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/total_import_field"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textViewImportoTotale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="200€"
            android:textColor="@color/orange_dark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView25"
            app:layout_constraintStart_toEndOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/money_sent_field"
            app:layout_constraintStart_toStartOf="@+id/textView25"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextImportoTransazione"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp"
            android:background="@drawable/circular_red_edittext"
            android:drawableStart="@drawable/ic_baseline_euro_gray_icon"
            android:drawableLeft="@drawable/ic_baseline_euro_gray_icon"
            android:ems="10"
            android:hint="@string/money_sent"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:theme="@style/editTextRed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAzzera"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="Azzera"
            android:textColor="@color/red"
            android:textSize="12sp"
            app:cornerRadius="7dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonMeta"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextImportoTransazione" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMeta"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="Meta"
            android:textColor="@color/orange_light"
            android:textSize="12sp"
            app:cornerRadius="7dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonTotale"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonAzzera"
            app:layout_constraintTop_toBottomOf="@+id/editTextImportoTransazione" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTotale"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp"
            android:text="Totale"
            android:textColor="@color/green"
            android:textSize="12sp"
            app:cornerRadius="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonMeta"
            app:layout_constraintTop_toBottomOf="@+id/editTextImportoTransazione" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/floatingButtonModificaImporto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|right"
    android:layout_margin="16dp"
    android:contentDescription="@string/update_import"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:srcCompat="@drawable/ic_baseline_check_white_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>